@@ -24,6 +24,7 @@ PHP                                                                        NEWS
     real-time FPM status. (fat)
   . Fixed missing Expires and Cache-Control headers for ping and status pages.
     (fat)
+  . Implemented FR #54499 (FPM ping and status_path should handle HEAD request). (fat)
 
 - SPL extension:
   . Fixed bug #54971 (Wrong result when using iterator_to_array with use_keys
